--- a/README.org
+++ b/README.org
@@ -1034,7 +1034,7 @@ In addition to using to [[https://github.com/org2blog/org2blog/issues][reporting
 (setq gnutls-algorithm-priority "NORMAL:-VERS-TLS1.3")
     #+end_src
 
-* Developmente
+* Development
 :PROPERTIES:
 :ID:       org_gcr_2019-03-06T17-15-24-06-00_cosmicality:75FC72AE-6ECF-475F-AF06-9E45F13B07C8
 :END:
