--- a/README.org
+++ b/README.org
@@ -1039,16 +1039,18 @@ In addition to using to [[https://github.com/org2blog/org2blog/issues][reporting
 :ID:       org_gcr_2019-03-06T17-15-24-06-00_cosmicality:75FC72AE-6ECF-475F-AF06-9E45F13B07C8
 :END:
 
-- [[./docs/CONTRIBUTING.org][Contributing]].
-- [[./docs/TestPlan.org][Test Plan]].
-- Building
-  - The Package
-    - Use ~build.sh~
-  - Versioning
-    - Update ~owp--package~ and call ~owp--packaging~ to update files that use
-      these values then commit them
-- [[https://alphapapa.github.io/dont-tread-on-emacs/][Don't Tread On Emacs]].
-- [[./.github/CODE_OF_CONDUCT.org][Code of Conduct]].
+- Activities
+  - [[./docs/CONTRIBUTING.org][Contributing]].
+  - [[./docs/TestPlan.org][Test Plan]].
+  - Building
+    - The Package
+      - Use ~build.sh~
+    - Versioning
+      - Update ~owp--package~ and call ~owp--packaging~ to update files that use
+        these values then commit them
+- Rules
+  - [[https://alphapapa.github.io/dont-tread-on-emacs/][Don't Tread On Emacs]].
+  - [[./.github/CODE_OF_CONDUCT.org][Code of Conduct]].
 
 * License
 :properties:
