--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -1,3 +1,5 @@
+* Introduction
+
 Nice to meet you 😄.
 
 Wherever we end up going from here:
@@ -9,7 +11,7 @@ This contribution template exists so that you and other contributor will get
 the most out of your effort for the least time and expenditure required. It is
 simple—we are looking for all and everything you view as a contribution.
 
-Some examples:
+* Areas To Contribute
 
 - Improving documentation.
 - Bug triage.
@@ -23,20 +25,28 @@ Some examples:
   itself, or more.
 - Whatever things that /aren't/ listed here that /should be/.
 
+* Expectations
+
 There are some things that will save you and everyone else some time here that
 are expected of you when you do decide to make a contribution:
 
-- Review [[https://github.com/org2blog/org2blog/issues][issues]] you are facing, they might already be filed.
-- Review the [[https://github.com/org2blog/org2blog/wiki][wiki]] to learn more about how the entire package works—you don't
-  need to know all of Org2Blog to get a lot of value out of it. You might be
-  surprised to learn that it already has what you need. This also gives you
-  context for where something me be contributed.
-- Org2Blog is licensed [[https://www.gnu.org/licenses/gpl-3.0.en.html][GPLv3]]: you understand and submit your code under those
-  terms.
-- If the change is a minor change and you don't think that it needs copyright
-  assignment then the commit message should also contain the cookie
-  TINYCHANGE. Otherwise add a copyright statement to the modifie
-  file, in the form of ~;; Copyright (C) 1979 Ellen Ripley <ellen@ripley.com>~
+- Coding style and conventions :: The Emacs Lisp files should follow the
+      [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][Emacs Lisp conventions]] and the [[https://github.com/bbatsov/emacs-lisp-style-guide][Emacs Lisp Style Guide]].
+- Use quality-checking tools :: Use [[https://melpa.org/#/flycheck][flycheck]], [[https://github.com/purcell/package-lint][package-lint]] and
+     [[https://github.com/purcell/flycheck-package][flycheck-package]] to help you identify common errors in your package
+     metadata. Use [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][checkdoc]] to make sure that your package follows the
+     conventions for documentation strings.
+- *Review existing issues* :: [[https://github.com/org2blog/org2blog/issues][The issue tracker]] may already have them solved,
+     otherwise they are a great place to start
+- *Review the* :: [[%5B%5Bhttps://github.com/org2blog/org2blog/wiki%5D%5Bwiki%5D%5D ][Read more]] to learn more about how the entire package works—you
+                  don't need to know all of Org2Blog to get a lot of value out
+                  of it. You might be surprised to learn that it already has
+                  what you need. This also gives you context for where
+                  something me be contributed.
+- *Accept the license* :: Org2Blog is licensed [[https://www.gnu.org/licenses/gpl-3.0.en.html][GPLv3]]: you understand and submit
+     your code under those terms.
+
+* Conclusion
 
 That is it. That is everything. If you made it this far then kudos for you to
 sticking around. Thank you for spending your time here. Hope you keep blogging
