--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -7,7 +7,7 @@ Wherever we end up going from here:
 Thank you for spending your precious time and valued brainpower—it is truly
 appreciated.
 
-This contribution template exists so that you and other contributor will get
+This contribution guide exists so that you and other contributor will get
 the most out of your effort for the least time and expenditure required. It is
 simple—we are looking for all and everything you view as a contribution.
 
