--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -4,8 +4,8 @@ Nice to meet you 😄.
 
 Wherever we end up going from here:
 
-⚠Thank you for spending your precious time and valued brainpower—it is truly
-appreciated.⚠
+Thank you for spending your precious time and valued brainpower—it is truly
+appreciated!
 
 This contribution guide exists so that you and other contributor will get
 the most out of your effort for the least time and expenditure required. It is
