--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -25,10 +25,7 @@ simple—we are looking for all and everything you view as a contribution.
   itself, or more.
 - Whatever things that /aren't/ listed here that /should be/.
 
-* Expectations
-
-There are some things that will save you and everyone else some time here that
-are expected of you when you do decide to make a contribution:
+* Contribution Expectations
 
 - Coding style and conventions :: The Emacs Lisp files should follow the
       [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][Emacs Lisp conventions]] and the [[https://github.com/bbatsov/emacs-lisp-style-guide][Emacs Lisp Style Guide]].
@@ -38,10 +35,6 @@ are expected of you when you do decide to make a contribution:
      conventions for documentation strings.
 - *Review existing issues* :: [[https://github.com/org2blog/org2blog/issues][The issue tracker]] may already have them solved,
      otherwise they are a great place to start
-- *Review the* Wiki :: [[%5B%5Bhttps://github.com/org2blog/org2blog/wiki%5D%5Bwiki%5D%5D ][Read more]] to learn more about how the entire package
-     works—you don't need to know all of Org2Blog to get a lot of value out of
-     it. You might be surprised to learn that it already has what you need.
-     This also gives you context for where something me be contributed.
 - *Accept the license* :: Org2Blog is licensed [[https://www.gnu.org/licenses/gpl-3.0.en.html][GPLv3]]: you understand and submit
      your code under those terms.
 
