--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -27,12 +27,14 @@ simple—we are looking for all and everything you view as a contribution.
 
 * Contribution Expectations
 
-- Coding style and conventions :: The Emacs Lisp files should follow the
+- Coding style and conventions :: The Emacs Lisp code should follow the
       [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][Emacs Lisp conventions]] and the [[https://github.com/bbatsov/emacs-lisp-style-guide][Emacs Lisp Style Guide]].
+- Grammar and Language :: Use a spell-checker like [[http://aspell.net/][Aspell]] and grammar-checker
+     like [[https://languagetool.org/][LanguageTool]] one your docstrings and documentation.
 - Use quality-checking tools :: Use [[https://melpa.org/#/flycheck][flycheck]], [[https://github.com/purcell/package-lint][package-lint]] and
-     [[https://github.com/purcell/flycheck-package][flycheck-package]] to help you identify common errors in your package
-     metadata. Use [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][checkdoc]] to make sure that your package follows the
-     conventions for documentation strings.
+     [[https://github.com/purcell/flycheck-package][flycheck-package]] to help you identify common errors in package metadata
+     and code. Use [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][checkdoc]] to make sure that your package
+     follows the conventions for documentation strings.
 - *Review existing issues* :: [[https://github.com/org2blog/org2blog/issues][The issue tracker]] may already have them solved,
      otherwise they are a great place to start
 - *Accept the license* :: Org2Blog is licensed [[https://www.gnu.org/licenses/gpl-3.0.en.html][GPLv3]]: you understand and submit
